Added login and managed reply, replay all and inoltra