@@ -8,9 +8,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.jfoenix:jfoenix:9.0.8'
-    implementation 'org.kordamp.ikonli:ikonli-javafx:12.0.0'
-    implementation 'org.kordamp.ikonli:ikonli-fontawesome5-pack:12.0.0'
 }
 
 javafx {
@@ -19,13 +16,6 @@ javafx {
 }
 
 run {
-    jvmArgs = [
-            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
-            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
-            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
-    ]
 }
 
 mainClassName = 'client.Main'
